--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Slabo+27px');
+@import url('https://fonts.googleapis.com/css?family=Stalinist+One');
 
 @import './helpers/_variables';
 @import './helpers/_mixins';
