--- a/src/style/helpers/_mixins.scss
+++ b/src/style/helpers/_mixins.scss
@@ -33,7 +33,6 @@
 @mixin gradient-text($gradient, $bg : 'light') {
   @supports(mix-blend-mode: lighten) {
     display: inline-block;
-    
     &:before {
       $size: calc(100% - 2px);
       content: '';
@@ -42,7 +41,17 @@
       top: 0; right: 0; bottom: 0; left: 0;
       background: unquote($gradient);
       pointer-events: none;
-      transform: scale(0.95);
+      transition: transform $slow $easeInOut;
+    }
+    &.true {
+      &:before {
+        transform: scale(0.95);
+      }
+    }
+    &.false {
+      &:before {
+        transform: scale(0);
+      }
     }
 
     @if ($bg == 'light') {
