changed styling of input box shadows

--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -123,7 +123,7 @@
 
 /******* OPEN MODE *******/
 
-.menu-item-container.active {
+.menu-item-container.active-true {
   z-index: 25;
 
   .menu-circle {
