--- a/src/style/helpers/_mixins.scss
+++ b/src/style/helpers/_mixins.scss
@@ -81,3 +81,20 @@
   background-color: $white;
   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
+
+
+/******* COMPONENTS *******/
+
+@mixin stripe-shadow () {
+  &:after {
+    $size: 100%;
+    @include super-center($top: calc(50% + 0.5em));
+    @include stripes-1;
+    content: '';
+    display: block;
+    width: calc(#{$size} - 2px);
+    height: $size;
+    border-radius: $border-radius;
+    z-index: -1;
+  }
+}
