--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -47,10 +47,11 @@ $easeOut   : cubic-bezier(0.190, 1.000, 0.220, 1.000);
 $easeIn    : cubic-bezier(0.950, 0.050, 0.795, 0.035);
 $easeInOut : cubic-bezier(1.000, 0.000, 0.000, 1.000);
 
-$slow:      0.75s;
-$fast:      0.3s;
-$app-speed: 0.4s;
-$app-delay: 450ms;
+$slow:      750ms;
+$moderate:  450ms;
+$fast:      300ms;
+$app-speed: 400ms;
+$app-delay: $moderate;
 
 
 /******* Size *******/
@@ -100,3 +101,7 @@ $action-btn-bg:           $primary;
 $action-btn-text:         $secondary;
 
 $footer-height:           $ios-offset;
+
+/******* Other *******/
+
+$shadow:                  0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
