--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -25,8 +25,9 @@ $grey:         $_400;
 $extra-large:  3.5em;
 $very-large:   3em;
 $large:        2.2em;
-$medium:       1.75em;
+$medium:       1.5em;
 $small:        1em;
+$normal:       $small;
 $tiny:         0.8em;
 
 $title:        $large;
@@ -67,6 +68,7 @@ $circle-size:                      10em;
 $circle-size-small:                $circle-size - 3em;
 $title-container-height:           4em;
 $border-radius:                    12px;
+$menu-height:                      52em;
 
 
 /******* HOME GRID *******/
