changed home menu to a more white theme

--- a/src/style/components/footer.scss
+++ b/src/style/components/footer.scss
@@ -5,7 +5,7 @@
   position: relative;
   height: $footer-height;
   width: 100%;
-  background-color: $black;
+  background-color: $white;
   @media (min-width: 767px) {
     position: fixed;
     bottom: 0;
@@ -17,7 +17,7 @@
     line-height: $footer-height;
     margin: 0;
     margin-left: 0.5em;
-    color: rgba($white, 0.5);
+    color: rgba($black, 0.75);
   }
 
   > .title {
