--- a/src/style/components/content-box.scss
+++ b/src/style/components/content-box.scss
@@ -9,6 +9,9 @@
   height: auto;
   margin: 0 auto;
   background-color: $white;
+  @media (max-width: 380px) {
+    top: 78%;
+  }
   @media (min-width: 767px) {
     top: 75%;
   }
