--- a/src/style/components/footer.scss
+++ b/src/style/components/footer.scss
@@ -15,7 +15,7 @@
   > .title,
   > .version {
     display: inline-block;
-    line-height: $footer-height;
+    line-height: 39px;
     margin: 0;
     margin-left: 0.5em;
     color: rgba($black, 0.5);
