--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,8 +1,21 @@
 doctype html
-html.no-js(lang='')
+html.no-js(lang='en')
   head
     meta(charset='UTF-8')
-    link(rel='manifest', href='manifest.json')
+    link(rel='apple-touch-icon', sizes='57x57', href='/public/favicons/apple-icon-57x57.png')
+    link(rel='apple-touch-icon', sizes='60x60', href='/public/favicons/apple-icon-60x60.png')
+    link(rel='apple-touch-icon', sizes='72x72', href='/public/favicons/apple-icon-72x72.png')
+    link(rel='apple-touch-icon', sizes='76x76', href='/public/favicons/apple-icon-76x76.png')
+    link(rel='apple-touch-icon', sizes='114x114', href='/public/favicons/apple-icon-114x114.png')
+    link(rel='apple-touch-icon', sizes='120x120', href='/public/favicons/apple-icon-120x120.png')
+    link(rel='apple-touch-icon', sizes='144x144', href='/public/favicons/apple-icon-144x144.png')
+    link(rel='apple-touch-icon', sizes='152x152', href='/public/favicons/apple-icon-152x152.png')
+    link(rel='apple-touch-icon', sizes='180x180', href='/public/favicons/apple-icon-180x180.png')
+    link(rel='icon', type='image/png', sizes='192x192', href='/public/favicons/android-icon-192x192.png')
+    link(rel='icon', type='image/png', sizes='32x32', href='/public/favicons/favicon-32x32.png')
+    link(rel='icon', type='image/png', sizes='96x96', href='/public/favicons/favicon-96x96.png')
+    link(rel='icon', type='image/png', sizes='16x16', href='/public/favicons/favicon-16x16.png')
+    link(rel='manifest', href='/public/manifest.json')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-capable', content='yes')
