trying to serve manifest.json...

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -15,7 +15,7 @@ html.no-js(lang='en')
     link(rel='icon', type='image/png', sizes='32x32', href='/public/favicons/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='96x96', href='/public/favicons/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/public/favicons/favicon-16x16.png')
-    link(rel='manifest', href='/public/manifest.json')
+    link(rel='manifest', href='/manifest.json')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-capable', content='yes')
