--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -2,21 +2,22 @@ doctype html
 html.no-js(lang='en')
   head
     meta(charset='UTF-8')
-    link(rel='apple-touch-icon', sizes='57x57', href='/public/favicons/apple-icon-57x57.png')
-    link(rel='apple-touch-icon', sizes='60x60', href='/public/favicons/apple-icon-60x60.png')
-    link(rel='apple-touch-icon', sizes='72x72', href='/public/favicons/apple-icon-72x72.png')
-    link(rel='apple-touch-icon', sizes='76x76', href='/public/favicons/apple-icon-76x76.png')
-    link(rel='apple-touch-icon', sizes='114x114', href='/public/favicons/apple-icon-114x114.png')
-    link(rel='apple-touch-icon', sizes='120x120', href='/public/favicons/apple-icon-120x120.png')
-    link(rel='apple-touch-icon', sizes='144x144', href='/public/favicons/apple-icon-144x144.png')
-    link(rel='apple-touch-icon', sizes='152x152', href='/public/favicons/apple-icon-152x152.png')
-    link(rel='apple-touch-icon', sizes='180x180', href='/public/favicons/apple-icon-180x180.png')
-    link(rel='icon', type='image/png', sizes='192x192', href='/public/favicons/android-icon-192x192.png')
-    link(rel='icon', type='image/png', sizes='32x32', href='/public/favicons/favicon-32x32.png')
-    link(rel='icon', type='image/png', sizes='96x96', href='/public/favicons/favicon-96x96.png')
-    link(rel='icon', type='image/png', sizes='16x16', href='/public/favicons/favicon-16x16.png')
     link(rel='manifest', href='/manifest.json')
+    link(rel='apple-touch-icon', sizes='57x57', href='/favicons/apple-icon-57x57.png')
+    link(rel='apple-touch-icon', sizes='60x60', href='/favicons/apple-icon-60x60.png')
+    link(rel='apple-touch-icon', sizes='72x72', href='/favicons/apple-icon-72x72.png')
+    link(rel='apple-touch-icon', sizes='76x76', href='/favicons/apple-icon-76x76.png')
+    link(rel='apple-touch-icon', sizes='114x114', href='/favicons/apple-icon-114x114.png')
+    link(rel='apple-touch-icon', sizes='120x120', href='/favicons/apple-icon-120x120.png')
+    link(rel='apple-touch-icon', sizes='144x144', href='/favicons/apple-icon-144x144.png')
+    link(rel='apple-touch-icon', sizes='152x152', href='/favicons/apple-icon-152x152.png')
+    link(rel='apple-touch-icon', sizes='180x180', href='/favicons/apple-icon-180x180.png')
+    link(rel='icon', type='image/png', sizes='192x192', href='/favicons/android-icon-192x192.png')
+    link(rel='icon', type='image/png', sizes='32x32', href='/favicons/favicon-32x32.png')
+    link(rel='icon', type='image/png', sizes='96x96', href='/favicons/favicon-96x96.png')
+    link(rel='icon', type='image/png', sizes='16x16', href='/favicons/favicon-16x16.png')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    meta(name="application-name", content="Mug Math")
     meta(name='mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='msapplication-starturl', content='/')
@@ -24,7 +25,7 @@ html.no-js(lang='en')
     meta(name='theme-color', content='#000000')
     title Mug Math
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet', defer='')
-    link(href='/public/style.css', rel='stylesheet')
+    link(href='/style.css', rel='stylesheet')
   body
     script.
       window.__INITIAL_STATE__ = !{JSON.stringify(preloadedState)}
@@ -44,5 +45,5 @@ html.no-js(lang='en')
       </noscript>
     div
     div
-    script(type='text/javascript', src='/public/vendor.js')
-    script(type='text/javascript', src='/public/dist.js')
+    script(type='text/javascript', src='/vendor.js')
+    script(type='text/javascript', src='/dist.js')
