--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -40,7 +40,7 @@ html.no-js(lang='en')
     //
       <noscript>
       <div class="no-script" style="position: absolute; left: 50%; top: 33%; transform: translate(-50%,-50%); width: 40em; height: 10em; background-color: #fff; padding: 2em; font-size: 1.2em">
-      <p>Aw shucks. You have turned off javascript or your browser does not support it. You'll have to enable it or use a different browser to use MugMath! :( </p>
+      <p>Aw shucks. You have turned off javascript or your browser does not support it. You'll have to enable it or use a different browser to use Mug Math! :( :( :(</p>
       </div>
       </noscript>
     div
