--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -20,13 +20,14 @@ html.no-js(lang='en')
     meta(name="application-name", content="Mug Math")
     meta(name='mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-capable', content='yes')
+    meta(name='apple-mobile-web-app-status-bar-style', content='black')
     meta(name='msapplication-starturl', content='/')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='theme-color', content='#000000')
     title Mug Math
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet', defer='')
     link(href='/style.css', rel='stylesheet')
-  body
+  body.preload
     script.
       window.__INITIAL_STATE__ = !{JSON.stringify(preloadedState)}
     //if lt IE 8
