--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,4 +1,3 @@
-// @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Slabo+27px');
 
 @import './helpers/_variables';
@@ -32,6 +31,12 @@ html {
 body {
     background-color: $offwhite;
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'><g fill-rule='evenodd'><g id='hexagons' fill='%23e8e8e8' fill-opacity='0.4' fill-rule='nonzero'><path d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/></g></g></svg>");
+
+    // disables any animations on page load
+    &.preload * {
+      animation-duration: 0s !important;
+      transition: background-color 0s, opacity 0s, color 0s, width 0s, height 0s, padding 0s, margin 0s !important;
+    }
 }
 
 h1 {
@@ -71,6 +76,9 @@ h1 {
     animation-delay: $speed;
     animation-fill-mode: forwards;
     z-index: 10;
+    @media (min-width: 767px) {
+      @include super-center(0, $y: 44px);
+    }
 }
 
 .sub-app-outter {
