--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -93,7 +93,6 @@ h1 {
     min-height: 100%;
     height: 100%;
     background-color: rgba($white, 0);
-    filter: blur(0px);
     animation: unblur $speed $easeOut;
     z-index: 1;
     @media (min-width: 767px) {
@@ -101,20 +100,25 @@ h1 {
     }
 }
 
-.body-blur {
-  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'><defs><filter id='f1' x='0' y='0'><feGaussianBlur in='SourceGraphic' stdDeviation='3' /></filter></defs><g fill-rule='evenodd'><g id='hexagons' fill='%23e8e8e8' fill-opacity='0.4' fill-rule='nonzero'><path d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z' filter='url(#f1)'/></g></g></svg>");
-}
-
+// darken effect on app open
 .home-blur {
-  background-color: rgba($white, 0.05);
-
-  .menu-item-container:not(.active),
+  &.home-container,
+  .menu-item-container:not(.active-true) > .menu-circle,
   .title-container,
-  .footer-container {
+  .footer-container,
+  .content-box > p {
     $speed: $app-speed + 400ms;
-    will-change: filter;
-    animation: blur $speed;
-    animation-fill-mode: forwards;
+    will-change: background-color;
+    background-color: rgba($black, 0.55);
+    transition: background-color $speed $easeOut, border-color $speed $easeOut;
+  }
+
+  .content-box > h5 {
+    background-color: rgba($black, 0.65);
+  }
+
+  .footer-container {
+    border-color: rgba($black, 0.65);
   }
 }
 
@@ -127,24 +131,6 @@ h1 {
   }
   100% {
     opacity: 1;
-  }
-}
-
-@keyframes blur {
-  0% {
-    filter: blur(0px);
-  }
-  100% {
-    filter: blur(12px);
-  }
-}
-
-@keyframes unblur {
-  0% {
-    filter: blur(12px);
-  }
-  100% {
-    filter: blur(0px);
   }
 }
 
