--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -93,7 +93,7 @@ h1 {
     min-height: 100%;
     height: 100%;
     background-color: rgba($white, 0);
-    animation: unblur $speed $easeOut;
+    transition: background-color $speed $easeOut;
     z-index: 1;
     @media (min-width: 767px) {
       min-height: 100vh;
@@ -101,20 +101,21 @@ h1 {
 }
 
 // darken effect on app open
-.home-blur {
+.darken {
   &.home-container,
   .menu-item-container:not(.active-true) > .menu-circle,
   .title-container,
   .footer-container,
-  .content-box > p {
-    $speed: $app-speed + 400ms;
+  .content-box {
     will-change: background-color;
     background-color: rgba($black, 0.55);
-    transition: background-color $speed $easeOut, border-color $speed $easeOut;
+    transition: background-color $app-speed-slow $easeOut,
+                border-color $app-speed-slow $easeOut;
   }
 
   .content-box > h5 {
     background-color: rgba($black, 0.65);
+    transition: background-color $app-speed-slow $easeOut;
   }
 
   .footer-container {
@@ -153,10 +154,10 @@ h1 {
     display: none;
     z-index: -1;
   }
-  .home-blur {
+  .darken {
     .menu-item-container:not(.active),
     .title-container {
-      animation: none;
+
     }
   }
 }
