--- a/src/style/components/title.scss
+++ b/src/style/components/title.scss
@@ -11,7 +11,8 @@
   top: 0;
   height: $title-container-height;
   width: 100%;
-  background-color: $white;
+  background-color: rgba($white, 1);
+  transition: background-color $app-speed-slow $easeOut;
 }
 
 .title {
