--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -125,13 +125,12 @@
 }
 
 
-/******* OPEN MODE *******/
+/******* MODIFIERS *******/
 
 .menu-item-container.active-true {
-  z-index: 25;
+  z-index: 9999;
 
   .menu-circle {
-    z-index: 24;
     animation: circle-expand $app-speed;
     animation-fill-mode: forwards;
   }
@@ -148,6 +147,14 @@
   }
 }
 
+.menu-item-container.closing {
+  z-index: 9999 !important;
+}
+
+.menu-item-container.active-false {
+  animation: close-z $app-speed;
+  animation-fill-mode: forwards;
+}
 
 /******* ICON ADJUSTMENT *******/
 
@@ -179,15 +186,18 @@
 
 @keyframes circle-close {
   0% {
+    z-index: 9999;
     box-shadow: none;
     transform: translate(-50%,-50%) scale(16);
   }
   99%{
+    z-index: 9999;
     box-shadow: none;
   }
   100% {
     @include box-shadow(1);
     transform: translate(-50%,-50%) scale(1);
+    z-index: 0;
   }
 }
 
@@ -233,6 +243,12 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0);
   }
+}
+
+@keyframes close-z {
+  0% { z-index: 9999; }
+  99% { z-index: 9999; }
+  100% { z-index: 1; }
 }
 
 
