fixed issue with menu container zindex and made breakpoint scss vars

--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -10,6 +10,7 @@
     height: $menu-height;
     margin: 0 auto;
     overflow: hidden;
+    z-index: 1;
     @media (max-width: 380px) {
       $height: $menu-height + 4em;
       height: $height;
