--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -104,25 +104,28 @@ h1 {
 }
 
 // darken effect on app open
+
 .darken {
-  &.home-container,
-  .menu-item-container:not(.active-true) > .menu-circle,
-  .title-container,
-  .footer-container,
-  .content-box {
-    will-change: background-color;
-    background-color: rgba($black, 0.25);
-    transition: background-color $app-speed-slow $easeOut,
-                border-color $app-speed-slow $easeOut;
-  }
+  @media (min-width: $tablet-width) {
+    &.home-container,
+    .menu-item-container:not(.active-true) > .menu-circle,
+    .title-container,
+    .footer-container,
+    .content-box {
+      will-change: background-color;
+      background-color: rgba($black, 0.25);
+      transition: background-color $app-speed-slow $easeOut,
+                  border-color $app-speed-slow $easeOut;
+    }
 
-  .content-box > h5 {
-    background-color: rgba($black, 0.35);
-    transition: background-color $app-speed-slow $easeOut;
-  }
+    .content-box > h5 {
+      background-color: rgba($black, 0.35);
+      transition: background-color $app-speed-slow $easeOut;
+    }
 
-  .footer-container {
-    border-color: rgba($black, 0.35);
+    .footer-container {
+      border-color: rgba($black, 0.35);
+    }
   }
 }
 
