server side rendering of critical css for faster first paint

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -26,6 +26,8 @@ html.no-js(lang='en')
     meta(name='theme-color', content='#000000')
     title Mug Math
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet', defer='')
+    style.
+      !{criticalCSS}
     link(href='/style.css', rel='stylesheet')
   body.preload
     script.
