--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -6,94 +6,95 @@
 /******* HOME MENU *******/
 
 .menu-container {
-    position: relative;
-    height: $menu-height;
-    margin: 0 auto;
-    overflow: hidden;
-    z-index: 1;
-    @media (max-width: 380px) {
-      $height: $menu-height + 4em;
-      height: $height;
-    }
+  position: relative;
+  height: $menu-height;
+  margin: 0 auto;
+  overflow: hidden;
+  z-index: 1;
+  @media (max-width: 380px) {
+    $height: $menu-height + 4em;
+    height: $height;
+  }
 }
 
 
 /******* MENU ITEMS *******/
 
 .menu-item-container {
-    $menu-ease: cubic-bezier(0.700, 0.000, 0.000, 0.700);
-    position: absolute;
-    top: 0%;
-    left: -1%;
-    display: inline-block;
-    width: 50%;
-    height: 12em;
-    will-change: transform;
-    transition: $app-speed;
-    transition-delay: 100ms;
+  $menu-ease: cubic-bezier(0.700, 0.000, 0.000, 0.700);
+  position: absolute;
+  top: 0%;
+  left: -1%;
+  display: inline-block;
+  width: 50%;
+  height: 12em;
+  will-change: transform;
+  transition: $app-speed;
+  transition-delay: 100ms;
+  z-index: 1;
+
+  .menu-item-link {
+    @extend %full-position;
+    position: relative;
+    display: block;
     z-index: 1;
+  }
 
-    .menu-item-link {
-      @extend %full-position;
-      position: relative;
-      display: block;
-      z-index: 1;
-    }
+  .menu-circle {
+    @include super-center();
+    @include box-shadow(1);
+    margin: 0;
+    max-width: 100vw;
+    max-height: 100vh;
+    width: $circle-size-small;
+    height: $circle-size-small;
+    border-radius: $circle-size;
+    background-color: rgba($white, 1);
+    will-change: transform;
+    transform: translate(-50%,-50%) scale(1);
+    transition: transform $app-speed $easeInOut;
+  }
 
-    .menu-circle {
-      @include super-center();
-      @include box-shadow(1);
-      margin: 0;
-      max-width: 100vw;
-      max-height: 100vh;
-      width: $circle-size-small;
-      height: $circle-size-small;
-      border-radius: $circle-size;
-      background-color: rgba($white, 1);
-      will-change: width, height, opacity, border-radius;
-      animation: circle-close $app-speed;
-      transition: background-color $app-speed-slow $easeOut;
-    }
+  svg:not(.menu-text) {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 45% !important;
+      height: 45% !important;
+      color: $black !important;
+      opacity: 1 !important;
+      transform: translate(-50%, -50%) scale(1);
+      animation: icon-show $app-speed $easeInOut;
+  }
 
-    svg:not(.menu-text) {
+  .menu-text {
+      position: absolute;
+      transform-origin: 63% 69%;
+      top: 25%;
+      left: 46%;
+      font-size: 0.8em;
+      font-weight: 100;
+      text-transform: uppercase;
+      will-change: transform, opacity;
+      -webkit-transform: translate(-50%,-50%) rotate(75deg);
+      transform: translate(-50%,-50%) rotate(75deg);
+      animation: svg-text-show $app-speed linear;
+      animation-fill-mode: forwards;
+      z-index: -1;
+
+      &:after {
+        content: 'x';
+        width: 4em;
+        height: 4em;
+        background-color: red;
+        font-size: 5em;
         position: absolute;
+        display: block;
+        color: blue;
         top: 50%;
         left: 50%;
-        width: 45% !important;
-        height: 45% !important;
-        color: $black !important;
-        opacity: 1 !important;
-        transform: translate(-50%, -50%) scale(1);
-        animation: icon-show $app-speed $easeInOut;
-    }
-
-    .menu-text {
-        position: absolute;
-        transform-origin: 63% 69%;
-        top: 25%;
-        left: 46%;
-        font-size: 0.8em;
-        font-weight: 100;
-        text-transform: uppercase;
-        -webkit-transform: translate(-50%,-50%) rotate(75deg);
-        transform: translate(-50%,-50%) rotate(75deg);
-        transition: all $app-speed;
-        transition-delay: 240ms;
-        z-index: -1;
-
-        &:after {
-          content: 'x';
-          width: 4em;
-          height: 4em;
-          background-color: red;
-          font-size: 5em;
-          position: absolute;
-          display: block;
-          color: blue;
-          top: 50%;
-          left: 50%;
-        }
-    }
+      }
+  }
 }
 
 
@@ -132,19 +133,23 @@
   z-index: 26;
 
   .menu-circle {
-    animation: circle-expand $app-speed $easeInOut;
-    animation-fill-mode: forwards;
+    box-shadow: none;
+    will-change: transform;
+    transform: scale(16);
+    transition: transform $app-speed $easeIn;
   }
 
   svg:not(.menu-text) {
-    animation: icon-hide 50ms $easeInOut;
+    animation: icon-hide 50ms $easeIn;
     animation-fill-mode: forwards;
   }
 
   .menu-text {
-    opacity: 0;
-    transform: translate(-50%, -50%) rotate(215deg);
-    transition: opacity 200ms, transform $app-speed;
+    // opacity: 0;
+    // transform: translate(-50%, -50%) rotate(215deg);
+    // transition: opacity 200ms, transform $app-speed;
+    animation: svg-text-hide $app-speed linear;
+    animation-fill-mode: forwards;
   }
 }
 
@@ -152,6 +157,7 @@
   animation: close-z $app-speed;
   animation-fill-mode: forwards;
 }
+
 
 /******* ICON ADJUSTMENT *******/
 
@@ -167,28 +173,33 @@
 
 /******* ANIMATIONS *******/
 
-@keyframes circle-expand {
+@keyframes svg-text-hide {
   0% {
-    box-shadow: none;
-    transform: translate(-50%,-50%) scale(1);
+    opacity: 1;
+    transform: translate(-50%,-50%) rotate(75deg);
+  }
+  33% {
+    opacity: 0.1;
+    transform: translate(-25%, -33%) rotate(145deg);
   }
   100% {
-    box-shadow: none;
-    transform: translate(-50%,-50%) scale(16);
+    opacity: 0;
+    transform: translate(-46%, -14%) rotate(215deg);
   }
 }
 
-@keyframes circle-close {
+@keyframes svg-text-show {
   0% {
-    box-shadow: none;
-    transform: translate(-50%,-50%) scale(16);
+    opacity: 0;
+    transform: translate(-46%, -14%) rotate(215deg);
   }
-  99%{
-    box-shadow: none;
+  10% {
+    opacity: 0.1;
+    transform: translate(-25%, -33%) rotate(145deg);
   }
   100% {
-    @include box-shadow(1);
-    transform: translate(-50%,-50%) scale(1);
+    opacity: 1;
+    transform: translate(-50%,-50%) rotate(75deg);
   }
 }
 
@@ -232,7 +243,7 @@
   }
   100% {
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0);
+    transform: translate(-50%, -50%) scale(0.5);
   }
 }
 
