--- a/src/style/components/title.scss
+++ b/src/style/components/title.scss
@@ -6,7 +6,12 @@
 /******* TITLE *******/
 
 .title-container {
-  // some styles set on server render
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  position: absolute;
+  top: 0;
+  height: 4em;
+  width: 100%;
+  background-color: rgb(255,255,255);
   height: $title-container-height;
   transition: background-color $app-speed-slow $easeOut;
 }
