--- a/src/sub-apps/roast-development-calculator/style/top-section.scss
+++ b/src/sub-apps/roast-development-calculator/style/top-section.scss
@@ -2,7 +2,7 @@
 
 /******* TIME PICKER *******/
 
-body.roast-dev div:nth-last-child(-n+2) > div > div > div > div > div > div {
+body.roast-dev > div:nth-last-child(-n+2):not(#app) > div > div > div > div > div > div {
 
   /* numbers */
   > div:nth-child(2) > div:nth-child(2) > span {
@@ -16,7 +16,7 @@ body.roast-dev div:nth-last-child(-n+2) > div > div > div > div > div > div {
 
   /* minute/seconds numbers at top */
   > div:first-child {
-    padding: 2em 0 !important;
+    // padding: 2em 0 !important;
 
     > div {
       transform: translateY(-16px);
