--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -27,7 +27,6 @@ html.no-js(lang='en')
     title Mug Math
     style.
       !{criticalCSS}
-    link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
   body.preload
     script.
       window.__INITIAL_STATE__ = !{JSON.stringify(preloadedState)}
@@ -47,13 +46,20 @@ html.no-js(lang='en')
       </noscript>
     div
     div
-    script.
+    script.  
+      var icons = document.createElement('link');
+      icons.rel = 'stylesheet';
+      icons.href = 'https://fonts.googleapis.com/icon?family=Material+Icons';
+      icons.type = 'text/css';
+      var icondefer = document.getElementsByTagName('link')[0];
+      icondefer.parentNode.insertBefore(icons, icondefer);  
       var css = document.createElement('link');
       css.rel = 'stylesheet';
       css.href = '/style.css';
       css.type = 'text/css';
       var godefer = document.getElementsByTagName('link')[0];
       godefer.parentNode.insertBefore(css, godefer);
-    if !{onServer}
-      script(type='text/javascript', src='/vendor.js')
-      script(type='text/javascript', src='/dist.js')
+
+    if onServer
+      script(type='text/javascript', src='/vendor.js', defer='') 
+      script(type='text/javascript', src='/dist.js', defer='')
