--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -53,6 +53,9 @@
     will-change: transform;
     transform: translate(-50%,-50%) scale(1);
     transition: transform $app-speed $easeInOut;
+    > p {
+      transform: translateX(-9999px)
+    }
   }
 
   svg:not(.menu-text) {
