no more loading material icons and using material ui for performance boost

--- a/src/sub-apps/cold-drip-timer/style/tempo-slider.scss
+++ b/src/sub-apps/cold-drip-timer/style/tempo-slider.scss
@@ -25,18 +25,18 @@
 .minus {
   display: inline-block;
   position: absolute !important;
-  top: -11%;
+  top: -7%;
 }
 
 .plus {
-  right: -2%;
+  right: -5%;
 }
 
 .minus {
   left: -5%;
 }
 
-.plus .material-icons,
-.minus .material-icons {
+.plus .material-icon,
+.minus .material-icon {
   font-size: 32px !important;
 }
