--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -12,7 +12,13 @@ html.no-js(lang='en')
     link(rel='apple-touch-icon', sizes='144x144', href='/favicons/apple-icon-144x144.png')
     link(rel='apple-touch-icon', sizes='152x152', href='/favicons/apple-icon-152x152.png')
     link(rel='apple-touch-icon', sizes='180x180', href='/favicons/apple-icon-180x180.png')
+    link(rel='icon', type='image/png', sizes='36x36', href='/favicons/android-icon-36x36.png')
+    link(rel='icon', type='image/png', sizes='48x48', href='/favicons/android-icon-48x48.png')
+    link(rel='icon', type='image/png', sizes='72x72', href='/favicons/android-icon-72x72.png')
+    link(rel='icon', type='image/png', sizes='96x96', href='/favicons/android-icon-96x96.png')
+    link(rel='icon', type='image/png', sizes='144x144', href='/favicons/android-icon-144x144.png')
     link(rel='icon', type='image/png', sizes='192x192', href='/favicons/android-icon-192x192.png')
+    link(rel='icon', type='image/png', sizes='512x512', href='/favicons/android-icon-512x512.png')
     link(rel='icon', type='image/png', sizes='32x32', href='/favicons/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='96x96', href='/favicons/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicons/favicon-16x16.png')
