--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -22,6 +22,10 @@ html.no-js(lang='en')
     link(rel='icon', type='image/png', sizes='32x32', href='/favicons/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='96x96', href='/favicons/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicons/favicon-16x16.png')
+    link(rel='icon', type='image/png', sizes='70x70', href='/favicons/ms-icon-70x70.png')
+    link(rel='icon', type='image/png', sizes='144x144', href='/favicons/ms-icon-144x144.png')
+    link(rel='icon', type='image/png', sizes='150x150', href='/favicons/ms-icon-150x150.png')
+    link(rel='icon', type='image/png', sizes='310x310', href='/favicons/ms-icon-310x310.png')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name="application-name", content="Mug Math")
     meta(name='mobile-web-app-capable', content='yes')
