--- a/server/views/critical.css
+++ b/server/views/critical.css
@@ -22,7 +22,7 @@ p,h1,h2,h3,h4,h5,h6,svg {
   opacity: 0;
 }
 
-.title-container {
+.top-bar-container {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   position: absolute;
   top: 0;
