--- a/src/style/components/top-bar.scss
+++ b/src/style/components/top-bar.scss
@@ -5,7 +5,7 @@
 
 /******* TITLE *******/
 
-.title-container {
+.top-bar-container {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   position: absolute;
   top: 0;
@@ -14,6 +14,14 @@
   background-color: rgb(255,255,255);
   height: $title-container-height;
   transition: background-color $app-speed-slow $easeOut;
+
+  .hamburger {
+    @include super-center($title-container-height / 2, 0);
+    height: 1em;
+    width: 1em;
+    cursor: pointer;
+    z-index: 5;
+  }
 }
 
 .title {
@@ -23,17 +31,18 @@
   margin: 0;
   text-transform: lowercase;
   font-weight: 100;
+  top: 50%;
+  font-size: $title;
+  color: $black;
+  @media only screen and (min-width: 500px) {
+    $font: $title + 1em;
+    font-size: $font;
+  }
 
   span {
     font-weight: 100;
     color: $black;
   }
-}
-
-.title {
-  top: 50%;
-  font-size: $title;
-  color: $black;
 }
 
 .version {
