--- a/src/style/components/info-menu.scss
+++ b/src/style/components/info-menu.scss
@@ -7,6 +7,38 @@
   max-width: 20em;
   height: 28em;
 
+  &.info-menu-container {
+    height: 15em;
+
+    > div {
+      $delay: 300ms;
+      position: relative;
+      display: block;
+      width: 100%;
+      &:nth-child(1) > a { animation-delay: $delay;         }
+      &:nth-child(2) > a { animation-delay: $delay + 100ms; }
+      &:nth-child(3) > a { animation-delay: $delay + 200ms; }
+
+      > a {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-size: 1.4em;
+        text-transform: lowercase;
+        color: rgba($white, 0.8);
+        text-decoration: none;
+        opacity: 0;
+        animation: show-info-menu $slow $easeOut;
+        animation-fill-mode: forwards;
+        &:hover,
+        &:focus {
+          text-decoration: underline;
+          color: $white;
+        }
+      }
+    }
+  }
+
   &.about-container {
 
     > .about-back {
@@ -27,6 +59,17 @@
       font-size: 1.25em;
       color: rgba($white,0.75);
       line-height: 1.4;
+    }
+  }
+
+  @keyframes show-info-menu {
+    0% {
+      opacity: 0;
+      transform: translate(-50%,-50%) rotate(-45deg);
+    }
+    100% {
+      opacity: 1;
+      transform: translate(-50%,-50%) rotate(0deg);
     }
   }
 }
