--- a/src/style/components/info-menu.scss
+++ b/src/style/components/info-menu.scss
@@ -2,6 +2,7 @@
 @import '../helpers/_mixins';
 
 .info-menu-item {
+  $delay: 350ms;
   @include super-center();
   width: 90%;
   max-width: 20em;
@@ -11,7 +12,6 @@
     height: 15em;
 
     > div {
-      $delay: 300ms;
       position: relative;
       display: block;
       width: 100%;
@@ -41,24 +41,33 @@
 
   &.about-container {
 
+    > p {
+      padding: 1em;
+      font-size: 1.25em;
+      color: rgba($white,0.75);
+      line-height: 1.4;
+      opacity: 0;
+      animation: about-reveal $slow $easeOut;
+      animation-fill-mode: forwards;
+      animation-delay: $delay - 100ms;
+    }
+
     > .about-back {
+      margin-left: 0.8em;
       color: $white;
       text-decoration: none;
+      opacity: 0;
+      animation: about-reveal $slow $easeOut;
+      animation-fill-mode: forwards;
+      animation-delay: $delay;
       &:hover {
         text-decoration: underline;
       }
 
       > svg {
         color: $white !important;
-        transform: translateY(5px);
+        transform: translateY(6px);
       }
-    }
-
-    > p {
-      padding: 1em 3em;
-      font-size: 1.25em;
-      color: rgba($white,0.75);
-      line-height: 1.4;
     }
   }
 
@@ -70,6 +79,15 @@
     100% {
       opacity: 1;
       transform: translate(-50%,-50%) rotate(0deg);
+    }
+  }
+
+  @keyframes about-reveal {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
     }
   }
 }
