--- a/src/sub-apps/cold-drip-timer/style/sweet-spot-box.scss
+++ b/src/sub-apps/cold-drip-timer/style/sweet-spot-box.scss
@@ -1,5 +1,6 @@
 @import '../../../style/helpers/_variables';
 @import '../../../style/helpers/_mixins';
+@import '../../../style/helpers/_textures';
 
 #sweetspot {
   @include stripes-1;
