--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -12,7 +12,7 @@
   overflow: hidden;
   z-index: 1;
   @media (max-width: 380px) {
-    $height: $menu-height + 4em;
+    $height: $menu-height;
     height: $height;
   }
 }
