style sliders andd finish building

--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -37,6 +37,7 @@ $extra-large:  3.5em;
 $very-large:   3em;
 $large:        2.2em;
 $medium:       1.5em;
+$medium-small: 1.3em;
 $small:        1em;
 $normal:       $small;
 $tiny:         0.8em;
