fixing seo, performance, and style

--- a/src/sub-apps/easy-brew-calculator/style/input-slider.scss
+++ b/src/sub-apps/easy-brew-calculator/style/input-slider.scss
@@ -4,7 +4,8 @@
   $top: 2rem;
   $offset: 10%;
   position: relative;
-  height: 12rem;
+  height: 48%;
+
   > .name,
   > .value {
     position: absolute;
