--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -28,13 +28,14 @@ html.no-js(lang='en')
     link(rel='icon', type='image/png', sizes='310x310', href='/favicons/ms-icon-310x310.png')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name="application-name", content="Mug Math")
+    meta(name="description" content="Mugmath is a set of tools to help home coffee enthusiests and pro baristas make better coffee.")
     meta(name='mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
     meta(name='msapplication-starturl', content='/')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='theme-color', content='#000000')
-    title Mug Math
+    title Mugmath
     style.
       !{criticalCSS}
   body.preload
